--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <div class="header">
 
       <div class="logo">
-        <img src="./assets/images/logo.svg" alt="LOGO">
+        <img src="logo.svg" alt="LOGO">
       </div>
 
       <label class="helper">
         <input type="checkbox" class="navbar-toggle">
 
         <div class="nav-wrapper">
-          <img src="./assets/images/icon-menu.svg" alt="menu icon" class="icon">
+          <img src="icon-menu.svg" alt="menu icon" class="icon">
           <span class="cover"></span>
 
           <ul class="nav">
@@ -53,7 +53,7 @@
       <div class="item-section">
 
         <div class="img">
-          <img src="./assets/images/image-web-3-desktop.jpg" alt="">
+          <img src="image-web-3-desktop.jpg" alt="">
         </div>
         <h2>The Bright Future of Web 3.0?</h2>
 
@@ -102,7 +102,7 @@
 
           <div class="item">
             <div class="img">
-              <img src="./assets/images/image-retro-pcs.jpg" alt="retro pc">
+              <img src="image-retro-pcs.jpg" alt="retro pc">
             </div>
 
             <div class="text">
@@ -116,7 +116,7 @@
 
           <div class="item">
             <div class="img">
-              <img src="./assets/images/image-top-laptops.jpg" alt="top laptops">
+              <img src="image-top-laptops.jpg" alt="top laptops">
             </div>
 
             <div class="text">
@@ -130,7 +130,7 @@
 
           <div class="item">
             <div class="img">
-              <img src="./assets/images/image-gaming-growth.jpg" alt="gaming growth">
+              <img src="image-gaming-growth.jpg" alt="gaming growth">
             </div>
 
             <div class="text">
