--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -50,7 +50,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">gt78x</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/gt78x">gt78x</a>.
     </div>
   </footer>
 </body>
