--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -45,7 +45,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">gt78x</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/gt78x">gt78x</a>.
   </footer>
 
 </body>
