--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -39,7 +39,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/gt78x">gt78x</a>.
   </footer>
 </body>
 
